# trim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  add_submodules.sh  conanfile.py  conanfile.txt  configure.sh  main.cpp  run.sh
ai/src/: adjacency_list.cpp
calc/: CMakeLists.txt  arithmetic.cpp  arithmetic.h
calc/inc/: calc.h
calc/src/: calc.cpp
conan_tut/: README.md  conanfile.txt  main.cpp
inc/: trim_config.h.in
include/: string_util.h
reusable_stuff/: build.sh
reusable_stuff/ai/: CMakeLists.txt
reusable_stuff/ai/include/: adjacency_list.h
reusable_stuff/test_package/: CMakeUserPresets.json  conanfile.py
reusable_stuff/test_package/src/: .example.cpp.swp
reusable_stuff/util/src/: string_helper.cpp
src/: main.cpp  string_util.cpp
string_helper/: CMakeLists.txt
string_helper/inc/: string_helper.h
string_helper/src/: string_helper.cpp
test/: CMakeLists.txt
test/src/: string_util_tests.cpp
test_consumer/: CMakeLists.txt  build.sh  conanfile.py  main.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: example.cpp  example2.cpp
trim/: CMakeLists.txt  Findtrim.cmake  README.md  build.sh  conanfile.py  main.cpp
trim/ai/: CMakeLists.txt
trim/ai/include/: adjacency_list.h
trim/ai/src/: adjacency_list.cpp
trim/calc/: CMakeLists.txt
trim/test_package/: CMakeLists.txt  conanfile.py
trim/util/: CMakeLists.txt
trim_consumer/: CMakeLists.txt  build.sh  conanfile.py  conanfile.txt
trim_consumer/src/: main.cpp
trim_consumer2/: CMakeLists.txt  conanfile.py
trim_consumer2/src/: main.cpp
util/: CMakeLists.txt
util/include/: string_helper.h
